# MusicPlayer

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndAudio.cpp  AndAudio.h  AndCallJava.cpp  AndCallJava.h  AndFFmpeg.cpp  AndFFmpeg.h  AndPlayStatus.cpp  AndPlayStatus.h  AndQueue.cpp  AndQueue.h  AndVideo.cpp  AndVideo.h  AndroidLog.h  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/widget/: BackgourndAnimationRelativeLayout.java  DiscView.java
app/src/main/java/com/example/musicplayer/: MainActivity.java  MainActivityMusic.java
app/src/main/java/com/example/musicplayer/lisnter/: IOnPreparedListener.java  IPlayerListener.java  MNOnParparedListener.java
app/src/main/java/com/example/musicplayer/musicui/model/: MusicData.java
app/src/main/java/com/example/musicplayer/musicui/utils/: DisplayUtil.java  FastBlurUtil.java
app/src/main/java/com/example/musicplayer/musicui/widget/: BackgourndAnimationRelativeLayout.java  DiscView.java
app/src/main/java/com/example/musicplayer/opengl/: AndGLSurfaceView.java  AndRender.java  AndShaderUtil.java
app/src/main/java/com/example/musicplayer/service/: AndPlayer.java  MusicService.java
app/src/main/res/layout/: activity_main.xml  activity_main_video.xml  layout_discview.xml
app/src/main/res/raw/: fragment_shader.glsl
gradle/wrapper/: gradle-wrapper.properties
